add some integration tests, DTO's, change and fix some logic

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand">Navbar</a>
+    <a class="navbar-brand display-4">Employee-module</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
         aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,8 +9,8 @@
             <a class="nav-item nav-link" routerLink="employee-list">Employee list</a>
             <a class="nav-item nav-link" routerLink="department-list">Department list</a>
             <a class="nav-item nav-link" routerLink="position-list">Position list</a>
-            <a class="nav-item nav-link" routerLink="department-employee-list">Employee info(department)</a>
-            <a class="nav-item nav-link" routerLink="position-employee-list">Employee info(position)</a>
+            <a class="nav-item nav-link" routerLink="department-employee-list">Department info</a>
+            <a class="nav-item nav-link" routerLink="position-employee-list">Position info</a>
             <a class="nav-item nav-link" routerLink="hiring-info-list">Hiring info</a>
         </div>
     </div>
