--- a/src/app/department-list/department-list.component.html
+++ b/src/app/department-list/department-list.component.html
@@ -5,30 +5,31 @@
 
 
 
+
 <table class="table table-striped">
   <thead>
     <tr>
       <th scope="col" class="sortable" sortable="id" (sort)="onSort($event)">Id
-          <span class="caret-blank"
+        <span class="caret-blank"
           [ngClass]="{'caret-down':order=='desc' && column=='id', 'caret-up':order=='asc' && column=='id'}">
-    </span>
+        </span>
       </th>
       <th scope="col" class="sortable" sortable="name" (sort)="onSort($event)">Name
-          <span class="caret-blank"
+        <span class="caret-blank"
           [ngClass]="{'caret-down':order=='desc' && column=='name', 'caret-up':order=='asc' && column=='name'}">
-    </span>
+        </span>
       </th>
       <th scope="col" class="sortable" sortable="manager" (sort)="onSort($event)">Manager
-          <span class="caret-blank"
+        <span class="caret-blank"
           [ngClass]="{'caret-down':order=='desc' && column=='manager', 'caret-up':order=='asc' && column=='manager'}">
-    </span>
+        </span>
       </th>
-      <th scope="col" >Operations</th>
+      <th scope="col">Operations</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let department of list">
-      <th>{{department.id}}</th>     
+      <th>{{department.id}}</th>
       <td>{{department.name}}</td>
       <td *ngIf="department.manager != null">{{department.manager.personalInfo.firstName}}
         {{department.manager.personalInfo.lastName}}</td>
@@ -42,16 +43,15 @@
 </table>
 
 <div class="d-flex justify-content-between ">
-    <ngb-pagination
-    (pageChange)="onPageChange($event)" [collectionSize]="length" [(page)]="page" [pageSize]="size"
+  <ngb-pagination (pageChange)="onPageChange($event)" [collectionSize]="length" [(page)]="page" [pageSize]="size"
     [maxSize]="5" [rotate]="true" [boundaryLinks]="true">
-    </ngb-pagination>
-    <select (click)="onSizeChange()" class="custom-select" style="width: auto" [(ngModel)]="size">
-        <option [ngValue]="5">5 items per page</option>
-        <option [ngValue]="15">15 items per page</option>
-        <option [ngValue]="30">30 items per page</option>
-      </select>
-  </div>
+  </ngb-pagination>
+  <select (click)="onSizeChange()" class="custom-select" style="width: auto" [(ngModel)]="size">
+    <option [ngValue]="5">5 items per page</option>
+    <option [ngValue]="15">15 items per page</option>
+    <option [ngValue]="30">30 items per page</option>
+  </select>
+</div>
 
 <!-- add modal -->
 <div class="modal fade" id="addModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
@@ -67,13 +67,15 @@
       <div class="modal-body">
         <form #f="ngForm">
           <div class="form-group">
-            <input type="text" required class="form-control" placeholder="Name" name="name" [(ngModel)]="form.name" #name="ngModel"
-               [ngClass]="{'is-valid':name.valid && name.touched,'is-invalid':name.invalid && name.touched}" >
+            <input type="text" required class="form-control" placeholder="Name" name="name" [(ngModel)]="form.name"
+              #name="ngModel"
+              [ngClass]="{'is-valid':name.valid && name.touched,'is-invalid':name.invalid && name.touched}">
           </div>
           <div class="form-group">
             <label for="manager_id">Manager</label>
-            <select [disabled]="toggleAdd" required class="custom-select" name="manager_id" [(ngModel)]="form.manager_id" #manager_id="ngModel"
-            [ngClass]="{'is-valid':manager_id.valid && manager_id.touched,'is-invalid':manager_id.invalid && manager_id.touched}" >               
+            <select [disabled]="toggleAdd" required class="custom-select" name="manager_id"
+              [(ngModel)]="form.manager_id" #manager_id="ngModel"
+              [ngClass]="{'is-valid':manager_id.valid && manager_id.touched,'is-invalid':manager_id.invalid && manager_id.touched}">
               <option *ngFor="let employee of employeeList" [ngValue]="employee.id">
                 {{employee.personalInfo.firstName}} {{employee.personalInfo.lastName}}</option>
             </select>
@@ -86,8 +88,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal" (click)="f.resetForm()">Close</button>
-        <button type="button" class="btn btn-primary" [disabled]="f.form.invalid" 
-          (click)="add(f)">Save</button>
+        <button type="button" class="btn btn-primary" [disabled]="f.form.invalid" (click)="add(f)">Save</button>
       </div>
     </div>
   </div>
@@ -112,16 +113,16 @@
           </div>
           <div class="form-group">
             <input type="text" required class="form-control" placeholder="Name" name="name2" [(ngModel)]="formedit.name"
-              #name2="ngModel" [ngClass]="{'is-valid':name2.valid,'is-invalid':name2.invalid }" >
+              #name2="ngModel" [ngClass]="{'is-valid':name2.valid,'is-invalid':name2.invalid }">
           </div>
-          
-          <div  class="form-group">
+
+          <div class="form-group">
             <label for="manager_id">Manager</label>
-            <select required [compareWith]="compareFn" class="custom-select" name="manager_id2" [(ngModel)]="formedit.manager" #manager_id2="ngModel"
-            [ngClass]="{'is-valid':manager_id2.valid ,'is-invalid':manager_id2.invalid }"
-            [disabled]="toggleEdit">              
-        
-            <option *ngFor="let employee of employeeList"  [ngValue]="employee">
+            <select required [compareWith]="compareFn" class="custom-select" name="manager_id2"
+              [(ngModel)]="formedit.manager" #manager_id2="ngModel"
+              [ngClass]="{'is-valid':manager_id2.valid ,'is-invalid':manager_id2.invalid }" [disabled]="toggleEdit">
+
+              <option *ngFor="let employee of employeeList" [ngValue]="employee">
                 {{employee.personalInfo.firstName}} {{employee.personalInfo.lastName}}</option>
             </select>
           </div>
@@ -130,11 +131,11 @@
             <label class="custom-control-label" for="customCheck2">Without manager</label>
           </div>
         </form>
-        
+
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" [disabled]="fedit.form.invalid" 
+        <button type="button" class="btn btn-primary" [disabled]="fedit.form.invalid"
           (click)="edit(fedit)">Update</button>
       </div>
     </div>
