--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -3,110 +3,108 @@
     <div>
       <button class="btn btn-primary" data-toggle="modal" data-target="#addModal">Add employee</button>
     </div>
-    <div>
-        <button class="btn btn-primary" (click)="initFilter()">cccce</button>
-        <button class="btn btn-primary" (click)="resetFilter()">reset</button>
-      </div>
   </div>
   <div class="col">
     <div>
-      <button class="btn btn-outline-primary" data-toggle="collapse" href="#filter">Filter</button>
-    </div>
+      <button class="btn btn-outline-primary" data-toggle="collapse" href="#filter">Filter</button>    </div>
   </div>
 </div>
 <div class="collapse" id="filter">
   <div class="card card-body">
-    <form #filter="ngForm" (change)="saveFilter()">
-      <div class="row">
-        <div class="col">
-          <div class="form-group">
-            <label>First name</label>
-            <input type="text" class="form-control" placeholder="(empty)"
-            name="firstNameFilter" [(ngModel)]="filter.firstName" #firstNameFilter="ngModel">
-          </div>
-        </div>
-        <div class="col">
-          <div class="form-group">
-            <label>Last name</label>
-            <input type="text" class="form-control" placeholder="(empty)"
-            name="lastNameFilter" [(ngModel)]="filter.lastName" #lastNameFilter="ngModel">
-          </div>
-        </div>
-        <div class="col">
-          <div class="form-group">
-            <label>Skype</label>
-            <input type="text" class="form-control" placeholder="(empty)"
-            name="skypeFilter" [(ngModel)]="filter.skype" #skypeFilter="ngModel">
-          </div>
-        </div>
-        <div class="col">
-          <div class="form-group">
-            <label>Email</label>
-            <input type="text" class="form-control" placeholder="(empty)"
-            name="emailFilter" [(ngModel)]="filter.email" #emailFilter="ngModel">
-          </div>
-        </div>
-        <div class="col">
-          <div class="form-group">
-            <label>Phone number</label>
-            <input type="text" class="form-control" placeholder="(empty)"
-            name="phoneNumberFilter" [(ngModel)]="filter.phoneNumber" #phoneNumberFilter="ngModel">
-          </div>
+
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <label>First name</label>
+          <input (input)="saveFilter()" type="text" class="form-control" placeholder="(empty)" name="firstNameFilter"
+            [(ngModel)]="filter.firstName" #firstNameFilter="ngModel">
         </div>
       </div>
-      <div class="row">
-        <div class="col">
-          <div class="form-group">
-            <label>Adress</label>
-            <input type="text" class="form-control" placeholder="(empty)"
-            name="adressFilter" [(ngModel)]="filter.adress" #adressFilter="ngModel">
-          </div>
-        </div>
-        <div class="col">
-          <div class="form-group">
-            <label>Description</label>{{filter.description}}
-            <input type="text" class="form-control" placeholder="(empty)"
-            name="descriptionFilter" [(ngModel)]="filter.description" #descriptionFilter="ngModel">
-          </div>
+      <div class="col">
+        <div class="form-group">
+          <label>Last name</label>
+          <input (input)="saveFilter()" type="text" class="form-control" placeholder="(empty)" name="lastNameFilter"
+            [(ngModel)]="filter.lastName" #lastNameFilter="ngModel">
         </div>
       </div>
-      <div class="row">
-        <div class="col">
-          <div class="form-group">
-            <label>Position</label>
-            <select required class="custom-select "
-              [ngClass]="{'is-valid':position_id.valid && position_id.touched,'is-invalid':position_id.invalid && position_id.touched}">
-              <option *ngFor="let position of positionList" [ngValue]="position.id">{{position.name}}</option>
-            </select>
-          </div>
+      <div class="col">
+        <div class="form-group">
+          <label>Skype</label>
+          <input (input)="saveFilter()" type="text" class="form-control" placeholder="(empty)" name="skypeFilter"
+            [(ngModel)]="filter.skype" #skypeFilter="ngModel">
         </div>
-        <div class="col">
-          <div class="form-group">
-            <label>Department</label>
-            <select required class="custom-select" name="department_id" [(ngModel)]="form.department_id"
-              #department_id="ngModel"
-              [ngClass]="{'is-valid':department_id.valid && department_id.touched,'is-invalid':department_id.invalid && department_id.touched}">
-              <option *ngFor="let department of departmentList" [ngValue]="department.id">{{department.name}}
-              </option>
-            </select>
-          </div>
+      </div>
+      <div class="col">
+        <div class="form-group">
+          <label>Email</label>
+          <input (input)="saveFilter()" type="text" class="form-control" placeholder="(empty)" name="emailFilter"
+            [(ngModel)]="filter.email" #emailFilter="ngModel">
         </div>
-        <div class="col">
-          <div class="form-group">
-            <label>Status {{filter.active}}</label><br>
-            <div class="btn-group" role="group" aria-label="Basic example">
-              <button type="button" class="btn btn-primary" (click)="filter.active='true'"
+      </div>
+      <div class="col">
+        <div class="form-group">
+          <label>Phone number</label>
+          <input (input)="saveFilter()" type="text" class="form-control" placeholder="(empty)" name="phoneNumberFilter"
+            [(ngModel)]="filter.phoneNumber" #phoneNumberFilter="ngModel">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <label>Adress</label>
+          <input (input)="saveFilter()" type="text" class="form-control" placeholder="(empty)" name="adressFilter"
+            [(ngModel)]="filter.adress" #adressFilter="ngModel">
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group">
+          <label>Description</label>{{filter.description}}
+          <input (input)="saveFilter()" type="text" class="form-control" placeholder="(empty)" name="descriptionFilter"
+            [(ngModel)]="filter.description" #descriptionFilter="ngModel">
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        <div class="form-group">
+          <label>Position</label>
+          <select (change)="saveFilter()" class="custom-select "name="positionId" [(ngModel)]="filter.positionId"
+          #positionId="ngModel">
+          <option [ngValue]="''">(empty)</option>
+            <option *ngFor="let position of positionList" [ngValue]="position.id">{{position.name}}</option>
+          </select>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group">
+          <label>Department</label>
+          <select (change)="saveFilter()" class="custom-select" name="departmentId" [(ngModel)]="filter.departmentId"
+            #departmentId="ngModel">
+            <option [ngValue]="''">(empty)</option>
+            <option *ngFor="let department of departmentList" [ngValue]="department.id">{{department.name}}
+            </option>
+          </select>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-group">
+          <label>Status</label><br>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <button type="button" class="btn btn-outline-primary" (click)="filter.active='true'" (click)="saveFilter()"
               [ngClass]="{'active':filter.active=='true'}">Active</button>
-              <button type="button" class="btn btn-primary" (click)="filter.active=''"
+            <button type="button" class="btn btn-outline-primary" (click)="filter.active=''" (click)="saveFilter()"
               [ngClass]="{'active':filter.active==''}">All</button>
-              <button type="button" class="btn btn-primary" (click)="filter.active='false'"
+            <button type="button" class="btn btn-outline-primary" (click)="filter.active='false'" (click)="saveFilter()"
               [ngClass]="{'active':filter.active=='false'}">Dismissed</button>
-            </div>
+              <button class="ml-3 btn btn-danger" (click)="resetFilter()">Reset</button>
           </div>
         </div>
       </div>
-    </form>
+      
+    </div>
   </div>
+
 </div>
 <br>
 <table class="table table-striped">
