--- a/src/app/employee-list/employee-list.component.html
+++ b/src/app/employee-list/employee-list.component.html
@@ -398,8 +398,8 @@
                   <td>{{depPos.id}}</td>
                   <td>{{depPos.department.name}}</td>
                   <td>{{depPos.position.name}}</td>
-                  <td>{{depPos.startDate }}</td>
-                  <td>{{depPos.endDate}}</td>
+                  <td>{{depPos.startDate | date}}</td>
+                  <td>{{depPos.endDate | date}}</td>
                 </tr>
               </tbody>
             </table>
