--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
+            <a class="nav-item nav-link" routerLink="home">Home</a>
             <a class="nav-item nav-link" routerLink="employee-list">Employee list</a>
             <a class="nav-item nav-link" routerLink="department-list">Department list</a>
             <a class="nav-item nav-link" routerLink="position-list">Position list</a>
